2003-01-28  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclIOUtil.c:
	* generic/tclEvent.c:
	* generic/tclInt.h:
	* mac/tclMacFCmd.c:
	* unix/tclUnixFCmd.c:
	* win/tclWin32Dll.c:
	* win/tclWinFCmd.c:
	* win/tclWinInit.c:
	* win/tclWinInt.h:
	* tests/fileSystem.test: fix to finalization/unloading/encoding
	issues to make filesystem much less dependent on encodings for
	its cleanup, and therefore allow it to be finalized later in the
	exit process.  This fixes fileSystem.test-7.1.  Also fixed one
	more bug in setting of modification dates of files which have 
	undergone cross-platform copies.  [Patch 676271]
	
	* tests/basic.test:
	* tests/exec.test:
	* tests/fileName.test:
	* tests/io.test: fixed some test failures when tests are run 
	from a directory containing spaces.
	
2003-02-01  Kevin Kenny  <kennykb@users.sourceforge.net>

	* generic/tclCompCmds.c: Removed an unused variable that caused
	compiler warnings on SGI. [Bug 664379]
	
2003-02-01  Kevin Kenny  <kennykb@users.sourceforge.net>

	* generic/tclLoad.c: Changed the code so that if Tcl_StaticPackage
	is called to report the same package as being loaded in two interps,
	it shows up in [info loaded {}] in both of them (previously,
	it didn't appear in the static package list in the second.

	* tests/load.test Added regression test for the above bug.
	[Bug 670042]
	
2003-02-01  Kevin Kenny  <kennykb@users.sourceforge.net>

	* generic/tclClock.c: Fixed a bug that incorrectly allowed
	[clock clicks {}] and [clock clicks -] to be accepted as if
	they were [clock clicks -milliseconds].
	
	* tests/clock.test: Added regression tests for the above bug.
	[Bug 675356]
	
2003-02-01  Kevin Kenny  <kennykb@users.sourceforge.net>

	* tests/unixNotfy.test: Added cleanup of working files
	[Bug 675609]
	
2003-02-01  Kevin Kenny  <kennykb@users.sourceforge.net>

	* doc/Tcl.n: Added headings to the eleven paragraphs, to improve
	formatting in the tools that attempt to extract tables of contents